# jr-core

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  conanfile.txt  conanfile_minimal.txt
.github/workflows/: build.yml  claude.yml
android/: CMakeLists.txt
android/camera/: CMakeLists.txt
android/camera/include/camera/: camera_device.h
android/camera/src/: camera_device.cpp
android/include/jr_android/: camera_device.hpp  imu_device.hpp
android/src/: camera_device.cpp  imu_device.cpp
api/: CMakeLists.txt
api/include/jr_api/: bag_api.h  camera_device_api.h  runner_api.h
api/src/: bag_api.cpp  camera_device_api.cpp  runner_api.cpp
core/: CMakeLists.txt
core/bag/: CMakeLists.txt  bag.proto
core/bag/include/bag/: bag_reader.hpp  bag_writer.hpp  video_encoder_config.hpp
core/bag/src/: bag_reader.cpp  bag_writer.cpp  video_decoder.cpp  video_decoder.hpp  video_encoder.cpp  video_encoder.hpp
core/camera/: CMakeLists.txt
core/camera/include/camera/: android_camera_streamer.h  android_camera_streamer_api.h  camera_interface.h  camera_processor.h
core/camera/src/: android_camera_streamer.cpp  android_camera_streamer_api.cpp  camera_device_api.cpp  camera_interface.cpp  camera_processor.cpp
core/imgproc/: CMakeLists.txt
core/imgproc/include/imgproc/: imgproc.h
core/imgproc/include/jr_imgproc/: image.h  imgproc.h
core/imgproc/src/: image.cpp  imgproc.cpp
core/jr_math/src/: jr_math.cpp
core/math/: CMakeLists.txt
core/math/include/jr_math/: jr_math.h
core/middleware/: CMakeLists.txt
core/middleware/include/middleware/: backend.hpp  middleware.hpp  node.hpp  publisher.hpp  subscription.hpp
core/middleware/include/middleware/detail/: middleware_impl.hpp  subscription_any_impl.hpp  subscription_base.hpp  subscription_impl.hpp  transport.hpp
core/middleware/src/: backend.cpp  in_process_middleware.cpp  in_process_middleware.hpp  middleware.cpp  node.cpp  subscription.cpp
core/middleware/test/: CMakeLists.txt  middleware_test.cpp  test_common.hpp
core/middleware/test/integration/: middleware_integration_test.cpp
core/middleware/test/linux/: linux_transport_test.cpp
core/middleware/test/unit/: backend_unit_test.cpp
core/middleware_rs/: CMakeLists.txt  Cargo.toml  build.rs
core/middleware_rs/examples/: basic_usage.cpp
core/middleware_rs/include/middleware_rs/: fwd.hpp  middleware.hpp  publisher.hpp  subscriber.hpp
core/middleware_rs/proto/: sensor_msgs.proto  std_msgs.proto
core/middleware_rs/src/: lib.rs  middleware.rs  topic.rs  wrapper.cpp
core/middleware_rs/src/ffi/: bridge.rs  mod.rs
core/middleware_rs/standalone_test/: CMakeLists.txt  api_test.cpp
core/middleware_rs/tests/: proto_compatibility_test.rs
core/nodes/: CMakeLists.txt
core/nodes/camera_node/: CMakeLists.txt
core/nodes/camera_node/include/camera_node/: camera_node.hpp
core/nodes/camera_node/src/: calibration_extractor.cpp  calibration_extractor.hpp  camera_node.cpp
core/nodes/imu_node/: CMakeLists.txt
core/nodes/imu_node/include/imu_node/: imu_node.hpp
core/nodes/imu_node/src/: imu_node.cpp
core/rust/: CMakeLists.txt
core/rust/middleware/: CMakeLists.txt
core/rust/middleware/examples/: basic_usage.cpp
core/rust/middleware/include/middleware_rs/: fwd.hpp  middleware.hpp  subscriber.hpp
core/rust/middleware/src/: wrapper.cpp
core/vio/: CMakeLists.txt
core/vio/include/vio/: camera_calibration.hpp  imu_state.hpp  msg_utils.hpp  multi_camera_rerun_node.hpp  multi_camera_vio_node.hpp  multi_camera_visualizer_node.hpp  vio_node.hpp  vio_state.hpp  vis_state.hpp  visualizer_node.hpp
core/vio/src/: camera_calibration.cpp  imu_state.cpp  msg_utils.cpp  multi_camera_rerun_node.cpp  multi_camera_vio_node.cpp  multi_camera_visualizer_node.cpp  vio_node.cpp  visualizer_node.cpp
docs/: rust-middleware-plan.md  rust-mw-parallel-tasks.md
rust/: Cargo.toml
rust/middleware/: Cargo.toml  build.rs
rust/middleware/src/: lib.rs  middleware.rs  topic.rs
rust/middleware/src/ffi/: bridge.rs  mod.rs
rust/middleware/tests/: ffi_bridge_tests.rs  integration_pubsub_tests.rs  middleware_core_tests.rs  topic_registry_tests.rs
rust/middleware/tests/common/: mod.rs
sandbox/: CMakeLists.txt
sandbox/camera_test/: CMakeLists.txt  main.cpp
sandbox/mcap_test/: CMakeLists.txt  main.cpp
sandbox/slam_test/: CMakeLists.txt  main.cpp
scripts/: install_android_deps.sh  install_deps.sh
