[package]
name = "middleware_rs"
version = "0.1.0"
edition = "2021"
description = "Rust pub/sub middleware with zero-copy inter-thread communication"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }

# Concurrent collections
dashmap = "6"

# Protobuf (compatible with C++ protobuf wire format)
prost = "0.13"
prost-types = "0.13"
bytes = "1"

# FFI (will be used in Phase 2)
cxx = "1.0"

# Logging
tracing = "0.1"

[build-dependencies]
cxx-build = "1.0"
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
