[package]
name = "middleware"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Unit middleware package for jr-core"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
default = []
test-hooks = []

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
dashmap = "6"
cxx = "1.0"
once_cell = "1.19"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
tokio-test = "0.4"
